--- a/cupjoe_frontend/src/css/dashboard.css
+++ b/cupjoe_frontend/src/css/dashboard.css
@@ -364,6 +364,65 @@
   }
   
   /* Adjust the styles based on your design preferences */
+
+  .product-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    width: 300px; /* Set the width as per your design */
+    border-radius: 15px;
+  }
+  
+  .product-modal h3 {
+    font-size: 1.5em;
+    margin-bottom: 15px;
+  }
+  
+  .product-modal label {
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
+  .product-modal input,
+  .product-modal textarea,
+  .product-modal select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .product-modal button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+  
+  .product-modal button:last-child {
+    background-color: #d9534f; /* Use a different color for the "Close" button */
+  }
+  
+  .product-modal button:hover {
+    background-color: #45a049;
+  }
+  
+  /* Add additional styling as needed */
+  
   
 
  
