--- a/cupjoe_frontend/src/css/dashboard.css
+++ b/cupjoe_frontend/src/css/dashboard.css
@@ -102,7 +102,6 @@
     
      font-family: 'Poppins', sans-serif;
      width: 250px;
-     height: 90vh;
      border-radius: 10px;
      background-color: #ecf0f1;
      color: #34495e;
@@ -241,12 +240,26 @@
      background-color:#bdc3c7;
  
  }
+
+ .logout-link{
+    display: inline-block;
+    padding-left: 40px; /* Adjust the padding according to your preference */
+     background-image: url('../Images/logout.jpeg');
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position:1vh; /* Adjust the position of the icon */
+    text-decoration: none; /* Remove underline from the link */
+    transition: background-color 0.3s ease; /* Add smooth transition */
+    
+ }
+
+ 
  
  .centered-box {
      display: flex;
      justify-content: center;
      align-items: center;
-     min-height: 100vh; /* Ensure the box takes at least the full height of the viewport */
+     min-height: 120vh; /* Ensure the box takes at least the full height of the viewport */
  }
  
  .box {
