--- a/cupjoe_frontend/src/css/dashboard.css
+++ b/cupjoe_frontend/src/css/dashboard.css
@@ -784,7 +784,50 @@ button.user{
 button.user:hover{
   background-color: #0056b3 ;
 }
+.order-form-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px; /* Adjust the maximum width as needed */
+  margin: 0 auto; /* Center the form horizontally */
+  padding: 20px;
+}
+/* Add this to your existing CSS */
 
+.customer-details-form h3,
+.product-details-form h3 {
+  margin-bottom: 10px;
+}
+
+
+.customer-details-form,
+.product-details-form {
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.customer-details-form label,
+.product-details-form label {
+  flex-basis: calc(50% - 10px); /* Take up half of the width with some margin */
+  margin-bottom: 5px;
+  display: block;
+}
+
+.customer-details-form input,
+.customer-details-form select,
+.product-details-form input,
+.product-details-form select {
+  flex: 1; /* Take up equal space */
+  margin-right: 10px; /* Adjust margin for spacing between elements */
+  margin-bottom: 10px; /* Adjust margin for spacing between rows */
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.order-buttons {
+  display: flex;
+  justify-content: space-between;
+}
 
 
 
@@ -856,6 +899,19 @@ button.user:hover{
   input[type="text"] {
     width: 100%;
     margin-top: 10px;
+  }
+  .order-form-container {
+    max-width: 100%;
+  }
+
+  .customer-details-form,
+  .product-details-form {
+    margin-bottom: 10px;
+  }
+
+  .customer-details-form label,
+  .product-details-form label {
+    flex-basis: 100%; /* Take up full width on smaller screens */
   }
 }
    
