--- a/cupjoe_frontend/src/css/dashboard.css
+++ b/cupjoe_frontend/src/css/dashboard.css
@@ -323,10 +323,8 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
      /* Set the width as per your design */
     border-radius: 20px;
-
-    
-
   }
+ 
   
   .product-modal h3 {
     font-size: 1.5em;
@@ -947,6 +945,95 @@ button.user1:hover{
 .password-buttons button:hover {
   background-color: #2980b9;
 }
+/* Add this CSS to your 'dashboard.css' file */
+
+.edit-category-form {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 250px;
+  margin: 15px auto;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  transform: translate(-10%,-130%);
+}
+
+.edit-category-form label {
+  display: block;
+  margin-bottom: 6px;
+  font-weight: bold;
+}
+
+.edit-category-form input {
+  width: 100%;
+  padding: 6px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.edit-category-form button {
+  font-family: 'Poppins', sans-serif;
+  background-color: #bdc3c7;
+  color: black;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.edit-category-form button:hover {
+  background-color: #2980b9;
+}
+/* Add this CSS to your 'dashboard.css' file or create a new CSS file for the edit product form styles */
+
+.edit-product-form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  transform: translate(-10%,-90%);
+  border-radius: 10px;
+}
+
+.edit-product-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.edit-product-form input,
+.edit-product-form select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+.edit-product-form button {
+  font-family: 'Poppins', sans-serif;
+  background-color:whitesmoke;
+  color: black;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.edit-product-form button:hover {
+  background-color: #2980b9;
+}
+.edit-product-form {
+  /* Other styles */
+
+  /* Enable vertical scrolling if content exceeds the container height */
+  overflow-y: auto;
+}
+
+
+
+
 
 
 
