--- a/cupjoe_frontend/src/index.css
+++ b/cupjoe_frontend/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* ::-webkit-scrollbar{
+  width:10px;
+}
+::-webkit-scrollbar-track
+{
+  background: white;
+}
+::-webkit-scrollbar-thumb
+{
+  background:#888 ;
+}
+::-webkit-scrollbar-track:hover{
+  background: #555;
+} */
